added depoy part

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,13 @@ jobs:
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       run: |
         pytest -v
+
+deploy:
+    needs: test  
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' 
+    
+    steps:
+      - name: Deploy to Render
+        run: |
+          curl -X GET ${{ secrets.RENDER_DEPLOY_HOOK }}
