--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -e .
+        pip install .[test]
+        
 
     - name: Run tests with Secret
       env:
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       run: |
         pytest -v
+
