--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,15 @@ build-backend = "setuptools.build_meta"
 name = "lab_1"
 version = "0.1.0"
 description = "First lab"
+requires-python = ">=3.9"
 dependencies = [
-    "flask",
+    "flask==3.0.0",
+    "gunicorn==21.2.0",
 ]
-
+[project.optional-dependencies]
+test = [
+        "pytest==7.4.0",
+]
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["src*"]
