--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,14 @@ on:
     branches: [ "main" ]
 
 jobs:
+  security:
+    runs-on: ubuntu-latest
+
+    name: Install Bandit
+    run: pip install bandit
+
+    name: Run Bandit Security Scan
+    run: bandit -c pyproject.toml . 
   test:
     runs-on: ubuntu-latest
 
