--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,18 @@ dependencies = [
     "flask==3.0.0",
     "gunicorn==21.2.0",
 ]
+
 [project.optional-dependencies]
 test = [
         "pytest==7.4.0",
+        "bandit"
 ]
+
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["src*"]
+
+[tool.bandit]
+targets = ["src"]
+recursive = true
+exclude_dirs = ["tests"]
