--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,13 @@ on:
 jobs:
   security:
     runs-on: ubuntu-latest
+    steps:
+    - name: Install Bandit
+      run: pip install bandit
 
-    name: Install Bandit
-    run: pip install bandit
-
-    name: Run Bandit Security Scan
-    run: bandit -c pyproject.toml . 
+    - name: Run Bandit Security Scan
+      run: bandit -c pyproject.toml . 
+      
   test:
     runs-on: ubuntu-latest
 
