--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,20 @@ jobs:
   security:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
+        
     - name: Install Bandit
       run: pip install bandit
 
     - name: Run Bandit Security Scan
       run: bandit -c pyproject.toml . 
-      
+
   test:
     runs-on: ubuntu-latest
 
