--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: "3.11"
-        
+
     - name: Install Bandit
       run: pip install bandit
 
     - name: Run Bandit Security Scan
-      run: bandit -c pyproject.toml . 
+      run: bandit -c pyproject.toml . -ll
 
   test:
     runs-on: ubuntu-latest
