safety cinfig added

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
       run: pip install bandit
 
     - name: Check for vulnerable dependencies
-      run: |
-        pip install safety
-        safety scan
+      uses: pyupio/safety-action@v1
+      with:
+        api-key: ${{ secrets.SAFETY_API_KEY }}
 
     - name: Run Bandit Security Scan
       run: bandit -r . -c pyproject.toml -ll
